系统通知增加 比赛类型
